src/tests/snapshots/niri__tests__window_opening__check_target_size@fsT-dhF500-b-wfsAU.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: AU\nconfig:\nwindow-rule {\n    open-fullscreen true\n    default-window-height { fixed 500; }\n    border { on; }\n}"
expression: snapshot
snapshot_kind: text
---
initial configure:
size: 1280 × 720, bounds: 1240 × 680, states: [Fullscreen]

post-map configures:
size: 608 × 680, bounds: 1240 × 680, states: []
size: 608 × 680, bounds: 1240 × 680, states: [Activated]
